Branch_MM-4311(Create row and Insertion in OnlineOrder Table)

--- a/MenuMate/Services/ServicesApp/MenumateServices/MenumateServices.csproj
+++ b/MenuMate/Services/ServicesApp/MenumateServices/MenumateServices.csproj
@@ -189,6 +189,7 @@
     <Compile Include="DTO\MenumateOnlineOrdering\DBOrders\DayArcBillPayAttributes.cs" />
     <Compile Include="DTO\MenumateOnlineOrdering\DBOrders\DayArchiveAttributes.cs" />
     <Compile Include="DTO\MenumateOnlineOrdering\DBOrders\DayArcOrderTaxesAttributes.cs" />
+    <Compile Include="DTO\MenumateOnlineOrdering\DBOrders\OnlineOrderAttributes.cs" />
     <Compile Include="DTO\MenumateOnlineOrdering\DBOrders\SecurityAttributes.cs" />
     <Compile Include="DTO\MenumateOnlineOrdering\LoyaltyOOResponse.cs" />
     <Compile Include="DTO\MenumateOnlineOrdering\OOLoyaltyResponse.cs" />
