--- a/SignalR/Client/SystemTrayApp/app.config
+++ b/SignalR/Client/SystemTrayApp/app.config
@@ -26,7 +26,7 @@
     <client>
       <endpoint address="http://localhost:8750/MenumateServices/OnlineOrdering/"
         binding="basicHttpBinding" bindingConfiguration="basicHttpBinding_ServiceOnlineOrdering"
-        contract="OnlineOrdering.IWCFServiceOnlineOrdering" name="basicHttpBinding_ServiceOnlineOrdering" />
+        contract="OnlineOrderingRef.IWCFServiceOnlineOrdering" name="basicHttpBinding_ServiceOnlineOrdering" />
     </client>
   </system.serviceModel>
   <entityFramework>
