Branch_MM-4311 code commit for changes for Online Ordering sync

--- a/MenuMate/Services/ServicesApp/OnlineOrdering/OnlineOrdering.csproj
+++ b/MenuMate/Services/ServicesApp/OnlineOrdering/OnlineOrdering.csproj
@@ -71,7 +71,9 @@
     <Compile Include="Model\MenuModels\ApiSideGroupViewModel.cs" />
     <Compile Include="Model\MenuModels\ApiSiteItemViewModel.cs" />
     <Compile Include="Model\MenuModels\ApiSiteMenuViewModel.cs" />
+    <Compile Include="Model\OnlineOrderingDetailsResponse.cs" />
     <Compile Include="Model\OrderModels\ApiOrderDevicesViewModel.cs" />
+    <Compile Include="Model\ApiSiteTransactionSettingMappingViewModel.cs" />
     <Compile Include="Model\OrderModels\ApiWaiterAppPosTerminal.cs" />
     <Compile Include="Model\OrderModels\InvoiceTransactionViewModel.cs" />
     <Compile Include="Model\OrderModels\OrderInvoiceTransactionViewModel.cs" />
