--- a/MenuMate/Services/ServicesApp/MenumateServices/MenumateServices.csproj
+++ b/MenuMate/Services/ServicesApp/MenumateServices/MenumateServices.csproj
@@ -192,6 +192,7 @@
     <Compile Include="DTO\MenumateOnlineOrdering\DBOrders\OnlineOrderAttributes.cs" />
     <Compile Include="DTO\MenumateOnlineOrdering\DBOrders\SecurityAttributes.cs" />
     <Compile Include="DTO\MenumateOnlineOrdering\LoyaltyOOResponse.cs" />
+    <Compile Include="DTO\MenumateOnlineOrdering\OnlineOrderingDetails.cs" />
     <Compile Include="DTO\MenumateOnlineOrdering\OOLoyaltyResponse.cs" />
     <Compile Include="DTO\MenumateOnlineOrdering\OOLoyaltyResponsive.cs" />
     <Compile Include="DTO\MenumateOnlineOrdering\OOServiceResponse.cs" />
