Branch_MM-4311: Done changes for Bug Fixing (D.)

--- a/SignalR/Client/SystemTrayApp/OnlineOrderingApp.csproj
+++ b/SignalR/Client/SystemTrayApp/OnlineOrderingApp.csproj
@@ -114,6 +114,9 @@
     <None Include="Connected Services\OnlineOrderingRef\SystemTrayApp.OnlineOrderingRef.LoyaltyOOResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
+    <None Include="Connected Services\OnlineOrderingRef\SystemTrayApp.OnlineOrderingRef.OnlineOrderingDetails.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
     <None Include="Connected Services\OnlineOrderingRef\SystemTrayApp.OnlineOrderingRef.OOLoyaltyResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
