--- a/MenuMate/Parser/Source/VersionRes.rc
+++ b/MenuMate/Parser/Source/VersionRes.rc
@@ -20,8 +20,8 @@ BEGIN
     BEGIN
         BLOCK "040904b0"
         BEGIN
-				VALUE "Comments", "MenuMate DB Parser\0"
-				VALUE "CompanyName", "IQWorks Ltd.\0"
+				VALUE "Comments", "Posabl DB Parser\0"
+				VALUE "CompanyName", "Posabl Ltd.\0"
 				VALUE "FileDescription", "Parser Application\0"
             VALUE "FileVersion", STRFILEVER
 				VALUE "InternalName", "Parser\0"
